# 6115-final-project

./: .gitignore  .gitmodules
assets/: asteroid.ply  credits.txt  debug_camera.ply  scene.blend  star_destroyer.ply  x_wing.ply
pcb/: case_bottom.3mf  case_top.3mf  fp-info-cache  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  switch_cap.3mf
proposal/: ieee.typ  main.typ  refs.bib
proposal/pcb/: .gitignore  fp-info-cache  pcb.kicad_pro  pcb.kicad_sch
psoc/: psoc.cywrk  psoc.cywrk.yohan
psoc/GameLogic.cydsn/: .gitignore  GameLogic.cydwr  GameLogic.cyprj  GameLogic.cyprj.yohan  asteroids.c  asteroids.h  gamepad.c  gamepad.h  gpu.c  gpu.h  main.c  num.h  player.c  player.h  time.c  time.h  utils.h  world.c  world.h
psoc/GameLogic.cydsn/Generated_Source/PSoC5/: Action0_Btn.c  Action0_Btn.h  Action0_Btn_Pin.c  Action0_Btn_Pin.h  Action0_Btn_Pin_aliases.h  Action1_Btn.c  Action1_Btn.h  Action1_Btn_Pin.c  Action1_Btn_Pin.h  Action1_Btn_Pin_aliases.h  DebounceClock.c  DebounceClock.h  GameTimeClock.c  GameTimeClock.h  GameTimeReg.c  GameTimeReg.h  Joystick_Btn.c  Joystick_Btn.h  Joystick_Btn_Pin.c  Joystick_Btn_Pin.h  Joystick_Btn_Pin_aliases.h  Joystick_X.c  Joystick_X.h  Joystick_X_INT.c  Joystick_X_IRQ.c  Joystick_X_IRQ.h  Joystick_X_PM.c  Joystick_X_Pin.h  Joystick_X_Pin_aliases.h  Joystick_X_theACLK.c  Joystick_X_theACLK.h  Joystick_Y.c  Joystick_Y.h  Joystick_Y_INT.c  Joystick_Y_IRQ.c  Joystick_Y_IRQ.h  Joystick_Y_PM.c  Joystick_Y_Pin.c  Joystick_Y_Pin.h  Joystick_Y_Pin_aliases.h  (+33 more)
psoc/GameLogic.cydsn/TopDesign/: TopDesign.cysch
psoc/GameLogic.cydsn/assets/: assets.h  asteroid_mesh.c  star_destroyer_mesh.c  xwing_mesh.c
psoc/GameLogic.cydsn/common/: mesh.h  num.h
psoc/PSoC_Creator.cydsn/: PSoC_Creator-000.cywrk.yohan  PSoC_Creator.cycdx  PSoC_Creator.cydwr  PSoC_Creator.cyfit  PSoC_Creator.cyprj  PSoC_Creator.cyprj.yohan  PSoC_Creator.cywrk  PSoC_Creator.cywrk.yohan  PSoC_Creator.rpt  PSoC_Creator.svd  PSoC_Creator_timing.html  main.c
psoc/PSoC_Creator.cydsn/Export/: PSoCCreatorExportIDE.xml
psoc/PSoC_Creator.cydsn/Generated_Source/PSoC5/: ADC_SAR_1.h  Joystick_X.c  Joystick_X.h  Joystick_X_INT.c  Joystick_X_PM.c  Joystick_X_Pin.c  P2_0.c  (+36 more)
psoc/PSoC_Creator.cydsn/TopDesign/: TopDesign.cysch
psoc/source/: main.c
rp2040/: CMakeLists.txt
rp2040/src/: framebuffer.c  framebuffer.h  main.c  monke.h  psoc_rx.c  psoc_rx.h  psoc_rx.pio  raspberry_256x256_rgb565.h  rasterizer.c  rasterizer.h  st7789.c  st7789.h  st7789.pio
scripts/: gpu.py  meshgen.py
writeup/: ieee.typ  main.typ  refs.bib
